# jofi

./: .gitignore  Cargo.toml  README.md
src/: desktop.rs  history.rs  launcher.rs  lib.rs  main.rs  search.rs  telemetry.rs  ui.rs
