[package]
name = "jofi"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A fast, typo-resistant application launcher focused on .desktop entries."
repository = "https://github.com/1jehuang/jofi"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
fontdue = "0.9.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shell-words = "1.1"
smithay-client-toolkit = "0.20.0"
unicode-normalization = "0.1"
wayland-client = "0.31.11"

[dev-dependencies]
tempfile = "3.14"
